--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -3,7 +3,6 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-
     background-color: #1e1e1e;
 }
 
@@ -19,7 +18,6 @@
 
 .reels {
     display: flex;
-
     margin-bottom: 20px;
 }
 
@@ -56,13 +54,14 @@
     color: #fff;
 }
 
-.spin-button {
+.spin-button,
+.auto-spin-button {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 120px;
+    width: 180px;
     height: 50px;
-    margin-top: 20px;
+    margin-top: 10px;
     border: none;
     border-radius: 25px;
     font-size: 1.2rem;
@@ -74,31 +73,17 @@
     transition: background-color 0.3s;
 }
 
-.spin-button:hover {
+.spin-button:hover,
+.auto-spin-button:hover {
     background-color: #6a6a6a;
 }
 
-
-.auto-spin-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 120px;
-    height: 50px;
-    margin-top: 10px;
-    border: none;
-    border-radius: 25px;
-    font-size: 1.2rem;
-    font-weight: bold;
-    color: #fff;
-    background-color: #3a3a3a;
-    cursor: pointer;
-    outline: none;
-    transition: background-color 0.3s;
+.auto-spin-button.active {
+    background-color: #e74c3c;
 }
 
-.auto-spin-button:hover {
-    background-color: #5a5a5a;
+.auto-spin-button.active:hover {
+    background-color: #c0392b;
 }
 
 .symbol {
